# internal/httpapi/server.go
@@ -75,6 +75,9 @@ func (s *server) routes() []route {
 		{"POST", "/messages/move", s.moveMessages, false},
 		{"POST", "/messages/trash", s.trashMessages, false},
 		{"POST", "/messages/archive", s.archiveMessages, false},
+		{"POST", "/messages/spam", s.markSpam, false},
+		{"POST", "/messages/unspam", s.markNotSpam, false},
+		{"POST", "/messages/restore", s.restoreMessages, false},
 		{"POST", "/messages/label", s.labelMessages, false},
 		{"POST", "/messages/unlabel", s.unlabelMessages, false},
 		{"POST", "/messages/delete", s.deleteMessages, false},
